@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a default location `~/oqdata/dbserver.log` for the DbServer log
   * Provided a better error message in the case of absence of openquake.cfg
   * Removed the check on the export_dir when using the WebUI
   * Reduce the data transfer of the realization association object
